--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,9 +9,32 @@ body {
 }
 
 .Navegacion {
-    background-color: blue;
+    background-color: rgb(33, 33, 138);
     color: white;
     padding: 10pt;
+}
+
+.Principal {
+    background-color: white;
+    padding: 10pt;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.card-image {
+    object-fit: cover;
+    max-width: 200pt;
+    height: 200pt;
+}
+.Footer {
+    background-color: rgb(0, 0, 83);
+    color: white;
+    padding: 15pt;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 /* Mobile */
 @media only screen and (max-width: 576px) {
